yarte/tests/fails/internal.stderr
error: proc-macro derive panicked
 --> $DIR/internal.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = help: message: error
           --> $DIR/Test.hbs:1:4
            |
          1 | {{ super }}
            |    ^^^^^ Internal
            |
